# flutter_rust_adder

./: .gitignore  Makefile.toml  pubspec.yaml
example/lib/: main.dart
lib/: ffi.dart
native/adder/: Cargo.toml
native/adder-ffi/: Cargo.toml
