[package]
name = "adder-ffi"
version = "0.1.0"
authors = ["Marc Par <marc.par10@gmail.com>"]
edition = "2018"

[lib]
name = "adder_ffi"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adder = { path = "../adder" }

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.7"